update A1 with link to data

--- a/assessments/assignment1/assignment1.ipynb
+++ b/assessments/assignment1/assignment1.ipynb
@@ -194,7 +194,7 @@
    "source": [
     "## Exercise 3: Loess (50%)\n",
     "\n",
-    "We'll use the Titanic data set to try and predict survival of passengers (`Survival`) from `Age`, `Fare`, and `Sex`, using loess. You might find it useful to log-transform `Fare`. The data have been split into a training and test set in the files `titanic_train.csv` and `titanic_test.csv` in the `data` folder. Details of the data can be found at https://www.kaggle.com/c/titanic/data.\n",
+    "We'll use the Titanic data set to try and predict survival of passengers (`Survival`) from `Age`, `Fare`, and `Sex`, using loess. You might find it useful to log-transform `Fare`. ~~The data have been split into a training and test set in the files `titanic_train.csv` and `titanic_test.csv` in the `data` folder~~ The data can be found [here](https://raw.githubusercontent.com/vincenzocoia/BAIT509/master/assessments/assignment1/data/titanic.csv) as a csv. Details of the data can be found at https://www.kaggle.com/c/titanic/data.\n",
     "\n",
     "Note: To include `Sex` in your model, simply fit a loess model to each of `\"male\"` and `\"female\"`. \n",
     "\n",
