more prep for cm10

--- a/class_meetings/cm10.Rmd
+++ b/class_meetings/cm10.Rmd
@@ -1,6 +1,6 @@
 ---
 title: 'BAIT 509 Class Meeting 10'
-subtitle: "SVM; alternatives to accuracy; summary"
+subtitle: "SVM; course summary; alternatives to accuracy"
 date: "January 30, 2019"
 output: 
     html_document:
@@ -15,7 +15,19 @@ output:
 # Overview
 
 - Finish up with SVM's (cm09).
-- Alternatives to Accuracy: false positives/negatives, ROC, F1-score.
+	- Bias-variance tradeoff of `C`
+	- [Making Predictions, and Confidence (cm09)](https://vincenzocoia.github.io/BAIT509/class_meetings/cm09-svm.html#33_making_predictions,_and_confidence).
+	- General [SVM's (cm09)](https://vincenzocoia.github.io/BAIT509/class_meetings/cm09-svm.html#6_support_vector_machines)
+	- SVM coding example (see worksheet)
 - Summary of course
+- Bonus material: Alternatives to Accuracy: false positives/negatives, ROC, F1-score, AUC.
 - Work on your final projects, if time remains.
 
+# Alternatives to Accuracy
+
+1. Breast cancer data set: http://archive.ics.uci.edu/ml/datasets/Breast+Cancer
+2. Calculate accuracies of some models. Include "all negative" model, too.
+3. Make confusion matrices; define FPR and TPR (and synonyms); define aggregate measures.
+4. Try a different threshold for logistic regression and RF.
+5. Introduce ROC. Compare ROC for all three models.
+6. Use case: choosing a threshold; AUC to evaluate overall model performance.
