last changes to cm10

--- a/class_meetings/cm10.Rmd
+++ b/class_meetings/cm10.Rmd
@@ -25,9 +25,9 @@ output:
 
 # Alternatives to Accuracy
 
-1. Breast cancer data set: http://archive.ics.uci.edu/ml/datasets/Breast+Cancer
+1. [Breast cancer](https://raw.githubusercontent.com/vincenzocoia/BAIT509/master/data/breast_cancer.csv) data set ([source](http://archive.ics.uci.edu/ml/datasets/Breast+Cancer))
 2. Calculate accuracies of some models. Include "all negative" model, too.
 3. Make confusion matrices; define FPR and TPR (and synonyms); define aggregate measures.
-4. Try a different threshold for logistic regression and RF.
-5. Introduce ROC. Compare ROC for all three models.
+4. Try different thresholds.
+5. Introduce ROC: X=FPR, Y=TPR. Compare ROC for all three models.
 6. Use case: choosing a threshold; AUC to evaluate overall model performance.
