--- a/lectures/lecture2_error.ipynb
+++ b/lectures/lecture2_error.ipynb
@@ -1409,6 +1409,56 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "There are 160 observations in the training set.\n",
+      "There are 160 observations in the validation set.\n",
+      "There are 80 observations in the testing set.\n",
+      "For max_depth=1, validation error = 0.29.\n",
+      "For max_depth=5, validation error = 0.19.\n",
+      "For max_depth=10, validation error = 0.19.\n",
+      "For max_depth=15, validation error = 0.18.\n",
+      "For max_depth=20, validation error = 0.21.\n",
+      "Optimum model has test error = 0.11.\n"
+     ]
+    }
+   ],
+   "source": [
+    "df = pd.read_csv('data/cities_USA.csv', index_col=0)\n",
+    "X = df.drop(columns='vote')\n",
+    "y = df[['vote']]\n",
+    "# 1\n",
+    "X_trainval, X_test, y_trainval, y_test = train_test_split(X,\n",
+    "                                                          y,\n",
+    "                                                          test_size=0.2,\n",
+    "                                                          random_state=123)\n",
+    "X_train, X_val, y_train, y_val = train_test_split(X_trainval,\n",
+    "                                                  y_trainval,\n",
+    "                                                  test_size=0.5,\n",
+    "                                                  random_state=123)\n",
+    "# 2\n",
+    "print(f\"There are {X_train.shape[0]} observations in the training set.\")\n",
+    "print(f\"There are {X_val.shape[0]} observations in the validation set.\")\n",
+    "print(f\"There are {X_test.shape[0]} observations in the testing set.\")\n",
+    "# 3/4\n",
+    "for max_depth in [1, 5, 10, 15, 20]:\n",
+    "    model = DecisionTreeClassifier(max_depth=max_depth).fit(X_train, y_train)\n",
+    "    print(f\"For max_depth={max_depth}, validation error = {1 - model.score(X_val, y_val):.2f}.\")\n",
+    "# 5/6\n",
+    "model = DecisionTreeClassifier(max_depth=10).fit(X_trainval, y_trainval)\n",
+    "print(f\"Optimum model has test error = {1 - model.score(X_test, y_test):.2f}.\")\n",
+    "# We get a lower error here than the validation error. This is not necessarily surprising\n",
+    "# because we used significantly more data to build our model before testing. More on this\n",
+    "# next lecture!"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
