upload recent lectures and assignment 2

--- a/lectures/lecture4_feature_preprocessing.ipynb
+++ b/lectures/lecture4_feature_preprocessing.ipynb
@@ -29,6 +29,22 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "# Announcements"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- Assignment 1 due **11:59pm on Monday (20th Jan)**.\n",
+    "- I have office hours **1-2pm** on Monday in ESB1045.\n",
+    "- All marked in attendance on Wednesday and I won't take attendance today."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "# 0. Recap  (5 mins) <a id=0></a>\n",
     "\n",
     "- Cross-validation as a way of efficiently combining training/validation and choosing hyperparameters\n",
@@ -811,7 +827,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -819,7 +835,7 @@
      "output_type": "stream",
      "text": [
       "Training score: 0.00\n",
-      "Test score: 0.07\n"
+      "Test score: 0.06\n"
      ]
     }
    ],
@@ -830,13 +846,14 @@
     "y = df[['vote']]\n",
     "# first we split\n",
     "X_train, X_test, y_train, y_test = train_test_split(X,\n",
-    "                                                    y,\n",
+    "                                                    y.ravel(),\n",
     "                                                    test_size=0.2,\n",
     "                                                    random_state=123)\n",
     "# first, scale the training data\n",
     "scaler = StandardScaler()\n",
-    "scaler.fit(X)\n",
-    "X = scaler.transform(X)\n",
+    "scaler.fit(X_train)\n",
+    "X_train = scaler.transform(X_train)\n",
+    "X_test = scaler.transform(X_test)\n",
     "# print the model error\n",
     "knn = KNeighborsClassifier(n_neighbors=1).fit(X_train, y_train)\n",
     "print(f\"Training score: {1 - knn.score(X_train, y_train):.2f}\")\n",
@@ -1273,7 +1290,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1281,6 +1298,41 @@
     "dataset = load_breast_cancer()\n",
     "X = dataset.data\n",
     "y = dataset.target.astype(int)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "No scaling test score for kNN = 0.06\n",
+      "No scaling test score for dt = 0.04\n",
+      "Scaling test score = 0.03\n",
+      "Scaling test score for dt = 0.04\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 1\n",
+    "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.2, random_state=123)\n",
+    "# 2/3\n",
+    "knn = KNeighborsClassifier(n_neighbors=15).fit(X_train, y_train)\n",
+    "dt = DecisionTreeClassifier(random_state=123).fit(X_train, y_train)\n",
+    "print(f'No scaling test score for kNN = {1 - knn.score(X_test, y_test):.2f}')\n",
+    "print(f'No scaling test score for dt = {1 - dt.score(X_test, y_test):.2f}')\n",
+    "# 4/5\n",
+    "scaler = StandardScaler()\n",
+    "X_train = scaler.fit_transform(X_train)\n",
+    "X_test = scaler.transform(X_test)\n",
+    "knn = KNeighborsClassifier(n_neighbors=15).fit(X_train, y_train)\n",
+    "# 6\n",
+    "dt = DecisionTreeClassifier(random_state=123).fit(X_train, y_train)\n",
+    "print(f'Scaling test score = {1 - knn.score(X_test, y_test):.2f}')\n",
+    "print(f'Scaling test score for dt = {1 - dt.score(X_test, y_test):.2f}')"
    ]
   },
   {
