--- a/lectures/lecture6_feature_model_selection.ipynb
+++ b/lectures/lecture6_feature_model_selection.ipynb
@@ -266,7 +266,7 @@
     {
      "data": {
       "text/plain": [
-       "SelectKBest(k=20, score_func=<function chi2 at 0x1a17dc4170>)"
+       "SelectKBest(k=20, score_func=<function chi2 at 0x1a21ab4170>)"
       ]
      },
      "execution_count": 4,
@@ -1290,14 +1290,6 @@
    "metadata": {},
    "outputs": [
     {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/Users/tbeuzen/miniconda3/lib/python3.7/site-packages/sklearn/model_selection/_search.py:814: DeprecationWarning: The default of the `iid` parameter will change from True to False in version 0.22 and will be removed in 0.24. This will change numeric results when test-set sizes are unequal.\n",
-      "  DeprecationWarning)\n"
-     ]
-    },
-    {
      "data": {
       "text/plain": [
        "GridSearchCV(cv=10, error_score='raise-deprecating',\n",
@@ -1312,7 +1304,7 @@
        "                                              min_weight_fraction_leaf=0.0,\n",
        "                                              presort=False, random_state=None,\n",
        "                                              splitter='best'),\n",
-       "             iid='warn', n_jobs=None, param_grid={'max_depth': [1, 3, 5, 10]},\n",
+       "             iid=True, n_jobs=None, param_grid={'max_depth': [1, 3, 5, 10]},\n",
        "             pre_dispatch='2*n_jobs', refit=True, return_train_score=False,\n",
        "             scoring=None, verbose=0)"
       ]
@@ -1345,7 +1337,7 @@
      "output_type": "stream",
      "text": [
       "Best hyperparameter: {'max_depth': 10}\n",
-      "Best score: 0.08\n"
+      "Best score: 0.11\n"
      ]
     }
    ],
@@ -1370,7 +1362,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Error on test data: 0.12\n"
+      "Error on test data: 0.10\n"
      ]
     }
    ],
@@ -1467,6 +1459,107 @@
     "    3. LogisitcRegression\n",
     "    4. MultinomialNaiveBayes\n",
     "5. Select your best model and test it on the your test data."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "*** Hyperparameter tuning ***\n",
+      "KNN best hyperparams = {'n_neighbors': 7}.\n",
+      "KNN error: 0.13\n",
+      "DT best hyperparams = {'max_depth': 15}.\n",
+      "DT error: 0.13\n",
+      "LR best hyperparams = {'C': 1.0}.\n",
+      "LR error: 0.12\n",
+      "NB best hyperparams = {'alpha': 0.01}.\n",
+      "NB error: 0.12\n",
+      "\n",
+      "*** Best model ***\n",
+      "Error on test data: 0.12\n",
+      "\n",
+      "*** Voting classifier ***\n",
+      "Error on test data: 0.11\n"
+     ]
+    }
+   ],
+   "source": [
+    "import numpy as np\n",
+    "import pandas as pd\n",
+    "from sklearn.neighbors import KNeighborsClassifier\n",
+    "from sklearn.tree import DecisionTreeClassifier\n",
+    "from sklearn.linear_model import LogisticRegression\n",
+    "from sklearn.naive_bayes import MultinomialNB\n",
+    "from sklearn.feature_extraction.text import CountVectorizer\n",
+    "from sklearn.model_selection import train_test_split, GridSearchCV\n",
+    "from sklearn.feature_selection import SelectKBest, chi2\n",
+    "import warnings\n",
+    "from sklearn.exceptions import DataConversionWarning\n",
+    "warnings.filterwarnings(action='ignore', category=DataConversionWarning)\n",
+    "from sklearn.ensemble import VotingClassifier\n",
+    "\n",
+    "# Question 1 and 2\n",
+    "df = pd.read_csv('data/twitter-airline-sentiment.csv')\n",
+    "cv = CountVectorizer(stop_words='english')\n",
+    "X = cv.fit_transform(df['tweet'])\n",
+    "y = df['sentiment']\n",
+    "X_train, X_test, y_train, y_test = train_test_split(X,\n",
+    "                                                    y,\n",
+    "                                                    test_size=0.2,\n",
+    "                                                    random_state=0)\n",
+    "\n",
+    "# Question 3\n",
+    "selector = SelectKBest(chi2, k=30)\n",
+    "X_train_30 = selector.fit_transform(X_train, y_train)\n",
+    "X_test_30 = selector.transform(X_test)\n",
+    "\n",
+    "# Question 4\n",
+    "# I will first define a dictionary of the different models I want to test\n",
+    "models = {\n",
+    "    'KNN': GridSearchCV(KNeighborsClassifier(),\n",
+    "                        param_grid = {'n_neighbors': np.arange(1, 20, 2)},\n",
+    "                        cv=5),\n",
+    "    'DT': GridSearchCV(DecisionTreeClassifier(),\n",
+    "                       param_grid = {'max_depth': np.arange(1, 20, 2)},\n",
+    "                       cv=5),\n",
+    "    'LR': GridSearchCV(LogisticRegression(solver='lbfgs'),\n",
+    "                       param_grid = {'C': [0.01, 0.1, 1.0]},\n",
+    "                       cv=5),\n",
+    "    'NB': GridSearchCV(MultinomialNB(),\n",
+    "                       param_grid = {'alpha': [0.01, 0.1, 1, 10]},\n",
+    "                       cv=5)}\n",
+    "# I will now loop over each model in my dictionary and find the score\n",
+    "print(\"*** Hyperparameter tuning ***\")\n",
+    "for name, model in models.items():\n",
+    "    model.fit(X_train_30, y_train)\n",
+    "    print(f\"{name} best hyperparams = {model.best_params_}.\")\n",
+    "    print(f\"{name} error: {1 - model.best_score_:.2f}\")\n",
+    "    \n",
+    "# Question 5\n",
+    "# Naive Bayes is the best model (although they are all similar)\n",
+    "print(\"\")\n",
+    "print(\"*** Best model ***\")\n",
+    "best_model = MultinomialNB(alpha=0.01).fit(X_train_30, y_train)\n",
+    "print(f\"Error on test data: {1 - best_model.score(X_test_30, y_test):.2f}\")\n",
+    "\n",
+    "# Bonus material\n",
+    "# All our classifiers did well so why not use all of them to make predictions?\n",
+    "# We can do this with the VotingClassifier (which we'll learn about in a later lecture)\n",
+    "# Turns out that this ensemble approach doesn't really do much better than our single Naive Bayes model\n",
+    "print(\"\")\n",
+    "print(\"*** Voting classifier ***\")\n",
+    "voter = VotingClassifier(estimators=[('KNN', KNeighborsClassifier(n_neighbors=7)),\n",
+    "                                     ('DT', DecisionTreeClassifier(max_depth=15)),\n",
+    "                                     ('LR', LogisticRegression(solver='lbfgs', C=1)),\n",
+    "                                     ('NB', MultinomialNB(alpha=0.01))],\n",
+    "                         voting='soft')\n",
+    "voter.fit(X_train_30, y_train)\n",
+    "print(f\"Error on test data: {1 - voter.score(X_test_30, y_test):.2f}\")"
    ]
   },
   {
