update TA hours and intro

--- a/lectures/lecture1.ipynb
+++ b/lectures/lecture1.ipynb
@@ -89,13 +89,13 @@
    "source": [
     "### Your TAs\n",
     "\n",
-    "- **Daniel Ramandi**: in class questions\n",
-    "- **Ali Seyfi**: Office hours Wednesdays 4-5pm (Starting April 28th) \n",
-    "- **Andy Tai**: Office hours Fridays 12-1pm\n",
+    "- **Daniel Ramandi**: in class questions.\n",
+    "- **Ali Seyfi**: Office hours Wednesdays 4-5pm (Starting April 28th).\n",
+    "- **Andy Tai**: Office hours Fridays 12-1pm.\n",
     "\n",
     "\n",
-    "- Marking your assignments, quiz and project. \n",
-    "- All 4 of us will be answering questions on Piazza as well"
+    "- Marking your assignments, quiz and project.\n",
+    "- All 4 of us will be answering questions on Piazza as well."
    ]
   },
   {
